// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-oauth-callback-GET calls cookie.serialize with correct args 1`] = `
[
  [
    "idToken",
    "dummyIdToken",
    {
      "expires": 2023-03-24T00:40:16.529Z,
      "httpOnly": true,
      "secure": true,
    },
  ],
]
`;

exports[`api-oauth-callback-GET calls fetchIdToken with correct args 1`] = `
[
  [
    "dummyEvent",
  ],
]
`;

exports[`api-oauth-callback-GET resolves with a correct value 1`] = `
{
  "cookies": [
    "dummyCookieSerializeValue",
  ],
  "headers": {
    "location": "/",
  },
  "statusCode": 302,
}
`;

exports[`api-oauth-callback-GET when idTokenData is missing resolves with a correct value 1`] = `
{
  "cookies": [],
  "headers": {
    "location": "/",
  },
  "statusCode": 302,
}
`;

exports[`api-oauth-callback-GET when stage is "local" calls cookie.serialize with correct args 1`] = `
[
  [
    "idToken",
    "dummyIdToken",
    {
      "expires": 2023-03-24T00:40:16.529Z,
      "httpOnly": true,
      "secure": false,
    },
  ],
]
`;
